fixed the freaking horizontal scroll

--- a/our_site/public/css/home.css
+++ b/our_site/public/css/home.css
@@ -1,13 +1,13 @@
 .content{
     width: 100%;
     height: max-content;
-    margin: 40px 40px; /* cos page can only start after the nav */
+    margin: 0 0; /* cos page can only start after the nav */
 }
 
 .content-inner{
     width: 90%;
     height: max-content;
-    margin: 0 5%;
+    margin: 5% 5%;
 }
 
 .carousel {
